# Milestone v0.004 TBD
- Revising test dataset for easier local development
- Adding basic report functionality
- Modifying logging and runs scipts to help with debugging when running on AWS via Tibanna
- Added rules for indexing dipcall output bams
- Added analyses.tsv and updated resource config files for running framework on 44 HPRC genome and HG002 XY

# Milestone v0.003 2022-01-28
- Version of pipeline used for generation and evaluation of the HG002 T2T assembly based draft benchmark set(HPRC-HG002-cur.20211005) with excluded regions.
- Modified framework into three components; asm-varcalls, benchmark, and evaluations.
- Repository clean-up, removing unused files and code, simiplifying results and log paths
- Modified config files, analyses.tsv and resources.yml to better handle stratifications.
- Added genome and satellites excluded files to the repo and moved rules to generate files to snippets.
- Added directive for benchmarking for use in evaluating step resource requirements.
- Updated test dataset and config files for additional testing
- Revised documentation for running pipeline and added CONTRIBUTING.md with milestone release process.
- Snakemake formatting and linting using Snakemake tools
- Documentation for running pipeline

# Milestone v0.002 2022-01-20
- This version of the pipeline was used to perform initial analysis of benchmark set performance using 
- Added functionality to excluded defined genomic regions of draft benchmark regions bed file
- Added utility scripts for running the pipeline on the CTCMS cluster
- New Chr21 test dataset for use in pipeline development
- Initial CI/CD setup
- Snakemake formatting and linting using Snakemake tools
- Documentation for running pipeline

# Milestone v0.001 2022-01-10
- First milestone 
- added schema's for analyses table, config, and resources yamls
- Added ability to define analyses run with a metadata table for documenting framework runs
- Using pathlib for handling file paths